--- a/election-ui-javascript/src/components/PartyLinks/PartyLinks.css
+++ b/election-ui-javascript/src/components/PartyLinks/PartyLinks.css
@@ -1,3 +1,25 @@
-.Party-links {
-  color: red;
+.party__links {
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 30px;
+  padding: 0;
+}
+
+.party__link  {
+  border: 4px solid red;
+  padding: 1rem;
+  position: relative;
+}
+
+.party__link a{
+  font-size: 1rem;
+  font-weight: 400;
+  color: black;
+  transition: 0.2s , font-size 0.2s;
+}
+
+.party__link a:hover  {
+  font-size: 1.1rem;
+  position: absolute;
 }
