--- a/election-ui-javascript/src/components/Scoreboard.css
+++ b/election-ui-javascript/src/components/Scoreboard.css
@@ -2,18 +2,20 @@
   text-align: left;
 }
 
-.Election-logo {
-  height: 40vmin;
+.logo {
   pointer-events: none;
+  width: 90%;
+  padding-left: 5%;
 }
 
 .Election-scoreboard-header {
   background-color: #bb1919;
   min-height: 10vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 1rem;
+  padding: 1% 0;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -21,7 +23,7 @@
 main {
   margin: 0 auto;
   padding: 1rem;
-  max-width: 980px;
+  max-width: 90%;
 }
 
 .Scoreboard-refresh {
@@ -36,4 +38,12 @@ main {
 .Scoreboard-refresh:hover {
   background-color: #bb1919;
   color: white;
+}
+
+.winner_res {
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: 700;
+  margin: 1rem 0;
+  color: red
 }
