--- a/election-ui-javascript/src/components/Scorecard/Scorecard.css
+++ b/election-ui-javascript/src/components/Scorecard/Scorecard.css
@@ -19,3 +19,16 @@
 .Scorecard-table tbody tr:nth-of-type(2n + 1) {
   background-color: white;
 }
+
+.winner{
+  background-color: yellow;
+}
+
+
+.badge {
+    background-color: red;
+    color: white;
+    padding: 4px 8px;
+    text-align: center;
+    border-radius: 5px;
+  }
